--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Duma dep trai vl</title>
+    <title>Band</title>
     <link rel="icon" href="https://scontent.fdad1-3.fna.fbcdn.net/v/t39.30808-1/294436917_1364246280765568_6177818887221892596_n.jpg?stp=dst-jpg_s200x200&_nc_cat=111&ccb=1-7&_nc_sid=7206a8&_nc_ohc=Yj3QabfTRBkAX8dZ1ao&_nc_ht=scontent.fdad1-3.fna&oh=00_AT8soWKzUCswccESBaIHIipsHTSvfPOTqL4artDiJkTV-A&oe=62F28486" type="image/x-icon" />
     <link rel="stylesheet" href="./assets/font/themify-icons/themify-icons.css">
     <link rel="stylesheet" href="./assets/css/styles.css">
